Updated quickedit to be more useful

--- a/.config/hypr/applications.conf
+++ b/.config/hypr/applications.conf
@@ -7,6 +7,7 @@ $chat = discord
 $screenshot = IMG=~/Pictures/$(date +%Y-%m-%d_%H-%m-%s).png && grim -g "$(slurp)" $IMG && wl-copy < $IMG
 $swap_audio = $scripts/swapAudioOutputs.sh 
 $launcher = walker
-$shellcmd = zsh -c 'zsh -ic "$(walker -f -d -n -p shell)"'
+$shellcmd = zsh -c 'zsh -ic "$(walker -f -d -n -p run-shell-command)"'
 $clipboard_manager = walker -m clipboard
 $notification_manager = swaync-client -t -sw
+$quick_edit_script = $scripts/new_quick_edit.sh
