--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -21,7 +21,7 @@ bind = $MOD, T, exec, $scripts/Volume.sh --toggle-mic
 # Shouldn't need this anymore.
 #bind = $MOD, X, exec, $scripts/toggle-monitor-cam.sh toggle
 # This might be nice though?
-bind = $MOD, X, exec, $scripts/QuickEdit.sh
+bind = $MOD, X, exec, $quick_edit_script
 
 # Window Manager Binds
 bind = $MOD, C, killactive
