updated script to toggle sleep/suspend

--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -1,10 +1,5 @@
-#Commands & Apps to be executed at launch
-
 $scriptsDir = $HOME/.config/hypr/scripts
 
-$wallDIR=$HOME/Pictures/wallpapers
-$lock = $scriptsDir/LockScreen.sh
-$SwwwRandom = $scriptsDir/WallpaperAutoChange.sh
 
 # wallpaper stuff / More wallpaper options below
 exec-once = swww-daemon --format xrgb
@@ -31,6 +26,8 @@ exec-once = hyprpm reload -n
 exec-once = walker --gapplication-service
 
 # Rainbow borders
-exec-once = $scriptsDir/RainbowBorders.sh &
+#exec-once = $scriptsDir/RainbowBorders.sh
+exec-once = sleep 10 && bash -c 'hyprctl keyword general:col.active_border $(for _ in {1..10}; do echo -n "0xff$(openssl rand -hex 3) "; done)270deg'
+
 
 
