--- a/.config/hypr/applications.conf
+++ b/.config/hypr/applications.conf
@@ -2,12 +2,18 @@ $scripts = $HOME/.config/hypr/scripts
 
 $term = kitty
 $files = nautilus -w
-$web = firefox -new-window -P default-release
+$web = firefox -new-window
 $chat = discord
 $screenshot = IMG=~/Pictures/$(date +%Y-%m-%d_%H-%m-%s).png && grim -g "$(slurp)" $IMG && wl-copy < $IMG
 $swap_audio = $scripts/swapAudioOutputs.sh 
 $launcher = walker
 $shellcmd = zsh -c 'zsh -ic "$(walker -f -d -n -p run-shell-command)"'
-$clipboard_manager = walker -m clipboard
-$notification_manager = swaync-client -t -sw
-$quick_edit_script = $scripts/new_quick_edit.sh
+$clipboard = walker -m clipboard
+$notification = swaync-client -t -sw
+$quick_edit = $scripts/new_quick_edit.sh
+$increase_vol = $scripts/Volume.sh --inc
+$decrease_vol = $scripts/Volume.sh --dec
+$mic_toggle = $scripts/Volume.sh --toggle-mic
+$sleep_toggle = $scripts/toggle-sleep.sh
+$logout = $scripts/hyprland_logout.sh
+$movefocus_or_tab = $scripts/focus_or_changegroup.sh 
