--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -4,40 +4,35 @@
 $MOD = SUPER
 $scripts = $HOME/.config/hypr/scripts
 
-# Application Shortcuts
+# Applications
 bind = $MOD, Return, exec, $term
-bind = $MOD, TAB, hyprexpo:expo, toggle
 bind = $MOD, E, exec, $files
 bind = $MOD, W, exec, $web
 bind = $MOD, Q, exec, $chat
 bind = $MOD, S, exec, $screenshot
-bind = $MOD, A, exec, $swap_audio
 bind = $MOD, R, exec, $shellcmd 
 bind = $MOD, O, exec, $launcher
-bind = $MOD, V, exec, $clipboard_manager
-bind = $MOD, N, exec, $notification_manager
-bind = $MOD, T, exec, $scripts/Volume.sh --toggle-mic
+bind = $MOD, V, exec, $clipboard
+bind = $MOD, N, exec, $notification
+bind = $MOD, X, exec, $quick_edit
 
-# Shouldn't need this anymore.
-#bind = $MOD, X, exec, $scripts/toggle-monitor-cam.sh toggle
-# This might be nice though?
-bind = $MOD, X, exec, $quick_edit_script
-
-# Window Manager Binds
-bind = $MOD, C, killactive
-bind = $MOD, M, fullscreen
-bind = $MOD, F, togglefloating
+# Window Manager Functionality
+bind = $MOD, A, exec, $swap_audio
 bind = $MOD, B, togglegroup
-bind = $MOD, ESCAPE, exec, $scripts/hyprland_logout.sh
-
-
-bindel = , xf86audioraisevolume, exec, $scripts/Volume.sh --inc
-bindel = , xf86audiolowervolume, exec, $scripts/Volume.sh --dec
+bind = $MOD, C, killactive
+bind = $MOD, F, togglefloating
+bind = $MOD, M, fullscreen
+bind = $MOD, T, exec, $mic_toggle
+bind = $MOD, Z, exec, $sleep_toggle
+bind = $MOD, TAB, hyprexpo:expo, toggle
+bind = $MOD, ESCAPE, exec, $logout 
+bindel = , xf86audioraisevolume, exec, $increase_vol 
+bindel = , xf86audiolowervolume, exec, $decrease_vol
 
 # Move focus
 bind = $MOD, H, movefocus, l
-bind = $MOD, J, exec, $scripts/focus_or_changegroup.sh d
-bind = $MOD, K, exec, $scripts/focus_or_changegroup.sh u
+bind = $MOD, J, exec, $movefocus_or_tab d
+bind = $MOD, K, exec, $movefocus_or_tab u
 bind = $MOD, L, movefocus, r
 
 # Move windows
@@ -50,10 +45,11 @@ bind = $MOD CTRL, L, movewindow, r
 bind = $MOD SHIFT, P, movetoworkspace, special
 bind = $MOD, P, togglespecialworkspace,
 
-# Go to workspace
+# Go to next/prev workspace
 bind = $MOD SHIFT, H, workspace, -1
 bind = $MOD SHIFT, L, workspace, +1
 
+# Go to workspace
 bind = $MOD, 1, workspace, 1
 bind = $MOD, 2, workspace, 2
 bind = $MOD, 3, workspace, 3
