updated how screenshot is stored to clipboard

--- a/.config/hypr/applications.conf
+++ b/.config/hypr/applications.conf
@@ -4,7 +4,7 @@ $term = kitty
 $files = nautilus -w
 $web = firefox -new-window
 $chat = discord
-$screenshot = IMG=~/Pictures/$(date +%Y-%m-%d_%H-%m-%s).png && grim -g "$(slurp)" $IMG && wl-copy < $IMG
+$screenshot = IMG=~/Pictures/$(date +%Y-%m-%d_%H-%m-%s).png && echo "$(realpath "$IMG")" | wl-copy && grim -g "$(slurp)" $IMG && wl-copy < $IMG
 $swap_audio = $scripts/swapAudioOutputs.sh 
 $launcher = walker
 $shellcmd = zsh -c 'zsh -ic "$(walker -f -d -n -p run-shell-command)"'
