did necessary basic changes for laptop

--- a/.config/hypr/plugins.conf
+++ b/.config/hypr/plugins.conf
@@ -8,7 +8,12 @@ plugin {
         # e.g. center current
         # e.g. first 1 
         # e.g. center m+1
-        workspace_method = first 2
+        workspace_method = first 1
+
+        enable_gesture = true
+        gesture_fingers = 3
+        gesture_distance = 300
+        gesture_positive = true
 
     }
 }
