--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -19,6 +19,8 @@ exec-once = nm-applet --indicator &
 # Starting hypridle to start hyprlock
 exec-once = hypridle &
 
+exec-once = swaybg -i ~/Pictures/wallpaper.jpg &
+
 # Make sure plugins load.
 exec-once = hyprpm reload -n
 
