--- a/.config/hypr/workspaces.conf
+++ b/.config/hypr/workspaces.conf
@@ -3,14 +3,12 @@
 # https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
 
-workspace = 1, monitor:HDMI-A-1
-workspace = 2, monitor:DVI-D-1
-workspace = 3, monitor:DVI-D-1
-workspace = 4, monitor:DVI-D-1
-workspace = 5, monitor:DVI-D-1
-workspace = 6, monitor:DVI-D-1
-workspace = 7, monitor:DVI-D-1
-workspace = 8, monitor:DVI-D-1
-workspace = 9, monitor:DVI-D-1
-workspace = 10, monitor:DVI-D-1
-workspace = 11, monitor:DP-1
+workspace = 1, monitor:eDP-1
+workspace = 2, monitor:eDP-1
+workspace = 3, monitor:eDP-1
+workspace = 4, monitor:eDP-1
+workspace = 5, monitor:eDP-1
+workspace = 6, monitor:eDP-1
+workspace = 7, monitor:eDP-1
+workspace = 8, monitor:eDP-1
+workspace = 9, monitor:eDP-1
