some minor changes

--- a/.config/hypr/applications.conf
+++ b/.config/hypr/applications.conf
@@ -2,8 +2,8 @@ $scripts = $HOME/.config/hypr/scripts
 
 $term = kitty
 $files = nautilus -w
-$web = firefox -new-window
-$chat = discord
+$web = flatpak run com.brave.Browser
+$chat = flatpak run --socket=wayland com.discordapp.Discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 $screenshot = $scripts/screensnip.sh
 $swap_audio = $scripts/swapAudioOutputs.sh 
 $launcher = walker
