updated to add keybind for (un)swallowing windows

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -2,7 +2,6 @@
 
 # Basic Variables
 $MOD = SUPER
-$scripts = $HOME/.config/hypr/scripts
 
 # Applications
 bind = $MOD, Return, exec, $term
@@ -23,6 +22,7 @@ bind = $MOD, C, killactive
 bind = $MOD, F, togglefloating
 bind = $MOD, M, fullscreen
 bind = $MOD, T, exec, $mic_toggle
+bind = $MOD, U, toggleswallow
 bind = $MOD, Z, exec, $sleep_toggle
 bind = $MOD, TAB, hyprexpo:expo, toggle
 bind = $MOD, ESCAPE, exec, $logout 
