--- a/.config/hypr/windows.conf
+++ b/.config/hypr/windows.conf
@@ -5,9 +5,9 @@
 #windowrule = workspace 6 silent,^(gamescope)$
 
 # windowrule Position
-windowrule = center,^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)
-windowrule = center,^([Ww]hatsapp-for-linux)$
-windowrule = center,^([Ff]erdium)$
+# windowrule = center,^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)
+# windowrule = center,^([Ww]hatsapp-for-linux)$
+# windowrule = center,^([Ff]erdium)$
 
 # WINDOWRULE v2
 # windowrule v2 - position
