tried fixing config to fix hyprlock crash, updated brave flatpak to support screenshare

--- a/.config/hypr/applications.conf
+++ b/.config/hypr/applications.conf
@@ -2,7 +2,7 @@ $scripts = $HOME/.config/hypr/scripts
 
 $term = kitty
 $files = nautilus -w
-$web = flatpak run com.brave.Browser
+$web = flatpak run com.brave.Browser --ozone-platform=wayland --enable-features=WebRTCPipeWireCapturer
 $chat = flatpak run --socket=wayland com.discordapp.Discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 $screenshot = $scripts/screensnip.sh
 $swap_audio = $scripts/swapAudioOutputs.sh 
